--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Three JS example</title>
+        <title>My first three.js app</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
@@ -16,7 +16,11 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <h1>Hello world</h1>
-        <script src="main.js" async defer></script>
+        <script type="module">
+            // Find the latest version by visiting https://cdn.skypack.dev/three.
+                import * as THREE from 'https://cdn.skypack.dev/three@<version>';
+                const scene = new THREE.Scene();
+        </script>
+        <script src="main.js" ></script>
     </body>
 </html>
