--- a/index.html
+++ b/index.html
@@ -16,7 +16,15 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+<script type="module">
 
+  // Find the latest version by visiting https://cdn.skypack.dev/three.
+
+  import * as THREE from 'https://cdn.skypack.dev/pin/three@v0.133.1-a8rkd0QTHl2tMZXZJAEw/mode=imports/optimized/three.js';
+
+  const scene = new THREE.Scene();
+
+</script>
 
     <script type="module" src="main.js"></script>
     </body>
