--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <link rel="icon" href="./favicon_io/favicon.ico" >
         <title>My first three.js app</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
